server/k8s/redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: taskmaster-redis-service
spec:
  type: NodePort  
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: taskmaster-redis
